--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Stopwatch 10s</title>
+<title>Stopwatch 10s - Leaderboard</title>
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
 <style>
 body{margin:0;font-family:sans-serif;background:#1e3c72;color:#fff;display:flex;align-items:center;justify-content:center;min-height:100vh}
@@ -13,52 +13,110 @@ button{background:#ff4757;color:#fff;border:none;padding:15px 30px;font-size:1.2
 button:disabled{background:#636e72;cursor:not-allowed}
 .r{margin-top:20px;font-size:1.3em;padding:10px;border-radius:10px;background:rgba(255,255,255,.1)}
 .p{color:#2ed573;animation:p 1s infinite}
+.sbtn{background:#00bcd4 !important;margin-top:15px}
+.lb{margin-top:20px;text-align:left;max-height:200px;overflow-y:auto}
+.lb h3{margin:0 0 10px}
+.lb ul{margin:0;padding:0;list-style:none}
+.lb li{padding:8px;background:rgba(255,255,255,.1);margin:5px 0;border-radius:5px;display:flex;justify-content:space-between}
+.rank{color:#ffd700;font-weight:bold}
 @keyframes p{50%{transform:scale(1.05)}}
 </style>
 </head>
 <body>
 <div class="c">
-  <h1>Stopwatch Challenge</h1>
+  <h1>⏱️ Stopwatch Challenge</h1>
   <p>Stop <b>exactly</b> at <b>00:10.000</b></p>
   <div class="t" id="d">00:00.000</div>
   <button id="s">Start</button>
   <button id="t" disabled>Stop</button>
-  <div class="r" id="r">Ready?</div>
+  <div class="r" id="r">Ready? Nail 10 seconds!</div>
+  
+  <div class="lb" id="lb" style="display:none">
+    <h3>🏆 TOP 10</h3>
+    <ul id="lb-list"></ul>
+  </div>
+  
+  <button id="showLb" class="sbtn" style="display:none">View Leaderboard</button>
 </div>
 <script>
-const TG=window.Telegram?.WebApp; TG?.ready(); TG?.expand();
-const TARGET=10000, P=50, C=200;
-const d=document.getElementById('d'), s=document.getElementById('s'), t=document.getElementById('t'), r=document.getElementById('r');
-let start=0, e=0, int=null, run=false;
-function f(ms){
-  const m=Math.floor(ms/60000).toString().padStart(2,'0');
-  const sec=Math.floor(ms/1000)%60;
-  const s=sec.toString().padStart(2,'0');
-  return `${m}:${s}.${(ms%1000).toString().padStart(3,'0')}`;
+const TG = window.Telegram?.WebApp;
+if (TG) { TG.ready(); TG.expand(); TG.MainButton.setText('Share Score').show(); }
+
+const TARGET = 10000, PERFECT = 50, CLOSE = 200;
+const d = document.getElementById('d'), s = document.getElementById('s'), t = document.getElementById('t'), r = document.getElementById('r');
+const lb = document.getElementById('lb'), lbList = document.getElementById('lb-list'), showLb = document.getElementById('showLb');
+let start = 0, elapsed = 0, interval = null, running = false;
+let userId = TG?.initDataUnsafe?.user?.id || 'anon_' + Math.random().toString(36).substr(2,9);
+
+async function saveScore(diff) {
+  const score = { id: userId, diff, time: Date.now(), name: TG?.initDataUnsafe?.user?.first_name || 'Player' };
+  const res = await fetch('/api/score', { method: 'POST', body: JSON.stringify(score), headers: {'Content-Type':'application/json'} });
+  return res.ok;
 }
-function up(){d.textContent=f(e);}
-function begin(){
-  if(run)return;
-  run=true; start=Date.now()-e; s.disabled=true; t.disabled=false;
-  r.textContent='Go! Stop at 00:10.000';
-  int=setInterval(()=>{e=Date.now()-start; up();},7);
+
+async function getLeaderboard() {
+  const res = await fetch('/api/leaderboard');
+  return await res.json();
 }
-function end(){
-  if(!run)return;
-  clearInterval(int); run=false; s.disabled=false; t.disabled=true;
-  const diff=Math.abs(e-TARGET);
-  let msg='',cls='r';
-  if(diff<=P){msg=`PERFECT!<br>${f(e)} (±${diff} ms)`;cls='r p';}
-  else if(diff<=C){msg=`Close!<br>${f(e)} (${(diff/1000).toFixed(2)}s off)`;}
-  else{msg=`${f(e)}<br>${(diff/1000).toFixed(2)}s off`;}
-  r.innerHTML=msg; r.className=cls;
+
+async function loadLb() {
+  const scores = await getLeaderboard();
+  lbList.innerHTML = scores.slice(0,10).map((s,i) => 
+    `<li><span class="rank">#${i+1}</span> ${s.name}: ±${s.diff}ms</li>`
+  ).join('');
+  lb.style.display = 'block';
 }
-function reset(){
-  clearInterval(int); run=false; e=0; s.disabled=false; t.disabled=true; up();
-  r.textContent='Ready? Nail 10 seconds!';
+
+function format(ms) {
+  const mins = Math.floor(ms / 60000).toString().padStart(2, '0');
+  const secs = Math.floor(ms / 1000) % 60;
+  const s = secs.toString().padStart(2, '0');
+  const msStr = (ms % 1000).toString().padStart(3, '0');
+  return `${mins}:${s}.${msStr}`;
 }
-s.onclick=()=>{reset(); begin();}
-t.onclick=end;
+function update() { d.textContent = format(elapsed); }
+
+function startTimer() {
+  if (running) return;
+  running = true; start = Date.now() - elapsed;
+  s.disabled = true; t.disabled = false; showLb.style.display = 'none';
+  r.textContent = 'Go! Stop at 00:10.000'; r.className = 'r';
+  interval = setInterval(() => { elapsed = Date.now() - start; update(); }, 7);
+}
+
+async function stopTimer() {
+  if (!running) return;
+  clearInterval(interval); running = false;
+  s.disabled = false; t.disabled = true;
+  const diff = Math.abs(elapsed - TARGET);
+  await saveScore(diff);
+  
+  let msg = '', cls = 'r';
+  if (diff <= PERFECT) { msg = `PERFECT!<br>${format(elapsed)} (±${diff} ms)`; cls = 'r p'; }
+  else if (diff <= CLOSE) { msg = `Close!<br>${format(elapsed)} (${(diff/1000).toFixed(2)}s off)`; }
+  else { msg = `${format(elapsed)}<br>${(diff/1000).toFixed(2)}s off`; }
+  r.innerHTML = msg; r.className = cls;
+  
+  showLb.style.display = 'block';
+  showLb.onclick = loadLb;
+  
+  if (TG) {
+    TG.MainButton.onClick(() => {
+      const text = `${msg.replace(/<br>/g,'\n')} | #Stopwatch10s`;
+      TG.sendData(text);
+    });
+  }
+}
+
+function reset() {
+  clearInterval(interval); running = false; elapsed = 0;
+  s.disabled = false; t.disabled = true; update();
+  r.textContent = 'Ready? Nail 10 seconds!'; r.className = 'r';
+  showLb.style.display = 'none'; lb.style.display = 'none';
+}
+
+s.onclick = () => { reset(); startTimer(); };
+t.onclick = stopTimer;
 reset();
 </script>
 </body>
