--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Stopwatch 10s - Leaderboard</title>
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 <style>
 body{margin:0;font-family:sans-serif;background:#1e3c72;color:#fff;display:flex;align-items:center;justify-content:center;min-height:100vh}
 .c{background:rgba(0,0,0,.4);padding:30px;border-radius:20px;max-width:420px;width:90%;text-align:center}
@@ -24,7 +25,7 @@ button:disabled{background:#636e72;cursor:not-allowed}
 </head>
 <body>
 <div class="c">
-  <h1>⏱️ Stopwatch Challenge</h1>
+  <h1>Stopwatch Challenge</h1>
   <p>Stop <b>exactly</b> at <b>00:10.000</b></p>
   <div class="t" id="d">00:00.000</div>
   <button id="s">Start</button>
@@ -32,13 +33,15 @@ button:disabled{background:#636e72;cursor:not-allowed}
   <div class="r" id="r">Ready? Nail 10 seconds!</div>
   
   <div class="lb" id="lb" style="display:none">
-    <h3>🏆 TOP 10</h3>
+    <h3>TOP 10</h3>
     <ul id="lb-list"></ul>
   </div>
   
   <button id="showLb" class="sbtn" style="display:none">View Leaderboard</button>
 </div>
+
 <script>
+// === TELEGRAM + CONFETTI + SOUND ===
 const TG = window.Telegram?.WebApp;
 if (TG) { TG.ready(); TG.expand(); TG.MainButton.setText('Share Score').show(); }
 
@@ -47,26 +50,13 @@ const d = document.getElementById('d'), s = document.getElementById('s'), t = do
 const lb = document.getElementById('lb'), lbList = document.getElementById('lb-list'), showLb = document.getElementById('showLb');
 let start = 0, elapsed = 0, interval = null, running = false;
 let userId = TG?.initDataUnsafe?.user?.id || 'anon_' + Math.random().toString(36).substr(2,9);
+let userName = TG?.initDataUnsafe?.user?.first_name || 'Player';
 
-async function saveScore(diff) {
-  const score = { id: userId, diff, time: Date.now(), name: TG?.initDataUnsafe?.user?.first_name || 'Player' };
-  const res = await fetch('/api/score', { method: 'POST', body: JSON.stringify(score), headers: {'Content-Type':'application/json'} });
-  return res.ok;
-}
+// === SOUND EFFECTS ===
+const tickSound = new Audio('data:audio/wav;base64,UklGRnoGAABXQVZFZm10IBAAAAABAAEAQB8AAEAfAAABAAgAZGF0YQoGAACBhYqFbF1fdJivrJBhNjVgodDbq2EcBj+a2/LDciUFLIHO8tiJNwgZaLvt559NEAxQp+PwtmMcBjiR1/LMeSwFJHfH8N2QQg==');
+const winSound = new Audio('data:audio/wav;base64,UklGRl4GAABXQVZFZm10IBAAAAABAAEAIlYAAESsAAACABAAZGF0Yf4GAACBhYqFbF1fdJivrJBhNjVgodDbq2EcBj+a2/LDciUFLIHO8tiJNwgZaLvt559NEAxQp+PwtmMcBjiR1/LMeSwFJHfH8N2QQg==');
 
-async function getLeaderboard() {
-  const res = await fetch('/api/leaderboard');
-  return await res.json();
-}
-
-async function loadLb() {
-  const scores = await getLeaderboard();
-  lbList.innerHTML = scores.slice(0,10).map((s,i) => 
-    `<li><span class="rank">#${i+1}</span> ${s.name}: ±${s.diff}ms</li>`
-  ).join('');
-  lb.style.display = 'block';
-}
-
+// === FORMAT TIME ===
 function format(ms) {
   const mins = Math.floor(ms / 60000).toString().padStart(2, '0');
   const secs = Math.floor(ms / 1000) % 60;
@@ -76,12 +66,52 @@ function format(ms) {
 }
 function update() { d.textContent = format(elapsed); }
 
+// === API CALLS ===
+async function saveScore(diff) {
+  const score = { id: userId, diff, time: Date.now(), name: userName };
+  try {
+    const res = await fetch('/api/score', {
+      method: 'POST',
+      body: JSON.stringify(score),
+      headers: { 'Content-Type': 'application/json' }
+    });
+    return res.ok;
+  } catch (e) {
+    console.error('Save failed:', e);
+    return false;
+  }
+}
+
+async function getLeaderboard() {
+  try {
+    const res = await fetch('/api/leaderboard');
+    if (!res.ok) throw new Error('Failed');
+    return await res.json();
+  } catch (e) {
+    console.error('Load failed:', e);
+    return [];
+  }
+}
+
+async function loadLb() {
+  const scores = await getLeaderboard();
+  lbList.innerHTML = scores.slice(0,10).map((s,i) =>
+    `<li><span class="rank">#${i+1}</span> ${s.name}: ±${s.diff}ms</li>`
+  ).join('') || '<li>No scores yet!</li>';
+  lb.style.display = 'block';
+}
+
+// === GAME LOGIC ===
 function startTimer() {
   if (running) return;
   running = true; start = Date.now() - elapsed;
   s.disabled = true; t.disabled = false; showLb.style.display = 'none';
   r.textContent = 'Go! Stop at 00:10.000'; r.className = 'r';
-  interval = setInterval(() => { elapsed = Date.now() - start; update(); }, 7);
+  interval = setInterval(() => {
+    elapsed = Date.now() - start;
+    update();
+    tickSound.currentTime = 0; tickSound.play().catch(() => {});
+  }, 7);
 }
 
 async function stopTimer() {
@@ -89,17 +119,27 @@ async function stopTimer() {
   clearInterval(interval); running = false;
   s.disabled = false; t.disabled = true;
   const diff = Math.abs(elapsed - TARGET);
+  
+  // Save score
   await saveScore(diff);
   
   let msg = '', cls = 'r';
-  if (diff <= PERFECT) { msg = `PERFECT!<br>${format(elapsed)} (±${diff} ms)`; cls = 'r p'; }
-  else if (diff <= CLOSE) { msg = `Close!<br>${format(elapsed)} (${(diff/1000).toFixed(2)}s off)`; }
-  else { msg = `${format(elapsed)}<br>${(diff/1000).toFixed(2)}s off`; }
+  if (diff <= PERFECT) {
+    msg = `PERFECT!<br>${format(elapsed)} (±${diff} ms)`;
+    cls = 'r p';
+    confetti({ particleCount: 100, spread: 70, origin: { y: 0.6 } });
+    winSound.play();
+  } else if (diff <= CLOSE) {
+    msg = `Close!<br>${format(elapsed)} (${(diff/1000).toFixed(2)}s off)`;
+  } else {
+    msg = `${format(elapsed)}<br>${(diff/1000).toFixed(2)}s off`;
+  }
   r.innerHTML = msg; r.className = cls;
   
   showLb.style.display = 'block';
   showLb.onclick = loadLb;
   
+  // Share via Main Button
   if (TG) {
     TG.MainButton.onClick(() => {
       const text = `${msg.replace(/<br>/g,'\n')} | #Stopwatch10s`;
@@ -115,6 +155,7 @@ function reset() {
   showLb.style.display = 'none'; lb.style.display = 'none';
 }
 
+// === EVENTS ===
 s.onclick = () => { reset(); startTimer(); };
 t.onclick = stopTimer;
 reset();
