--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ button:disabled{background:#636e72;cursor:not-allowed}
 <script>
 // === TELEGRAM + CONFETTI + SOUND ===
 const TG = window.Telegram?.WebApp;
-if (TG) { TG.ready(); TG.expand(); TG.MainButton.setText('Share Score').show(); }
+if (TG) { TG.ready(); TG.expand(); TG.MainButton.hide(); } // Hide default, we'll use popup
 
 const TARGET = 10000, PERFECT = 50, CLOSE = 200;
 const d = document.getElementById('d'), s = document.getElementById('s'), t = document.getElementById('t'), r = document.getElementById('r');
@@ -51,10 +51,7 @@ const lb = document.getElementById('lb'), lbList = document.getElementById('lb-l
 let start = 0, elapsed = 0, interval = null, running = false;
 let userId = TG?.initDataUnsafe?.user?.id || 'anon_' + Math.random().toString(36).substr(2,9);
 let userName = TG?.initDataUnsafe?.user?.first_name || 'Player';
-
-// === SOUND EFFECTS ===
-const tickSound = new Audio('data:audio/wav;base64,UklGRnoGAABXQVZFZm10IBAAAAABAAEAQB8AAEAfAAABAAgAZGF0YQoGAACBhYqFbF1fdJivrJBhNjVgodDbq2EcBj+a2/LDciUFLIHO8tiJNwgZaLvt559NEAxQp+PwtmMcBjiR1/LMeSwFJHfH8N2QQg==');
-const winSound = new Audio('data:audio/wav;base64,UklGRl4GAABXQVZFZm10IBAAAAABAAEAIlYAAESsAAACABAAZGF0Yf4GAACBhYqFbF1fdJivrJBhNjVgodDbq2EcBj+a2/LDciUFLIHO8tiJNwgZaLvt559NEAxQp+PwtmMcBjiR1/LMeSwFJHfH8N2QQg==');
+let lastDiff = 0, lastRank = 0;
 
 // === FORMAT TIME ===
 function format(ms) {
@@ -76,10 +73,7 @@ async function saveScore(diff) {
       headers: { 'Content-Type': 'application/json' }
     });
     return res.ok;
-  } catch (e) {
-    console.error('Save failed:', e);
-    return false;
-  }
+  } catch (e) { console.error('Save failed:', e); return false; }
 }
 
 async function getLeaderboard() {
@@ -87,18 +81,38 @@ async function getLeaderboard() {
     const res = await fetch('/api/leaderboard');
     if (!res.ok) throw new Error('Failed');
     return await res.json();
-  } catch (e) {
-    console.error('Load failed:', e);
-    return [];
-  }
+  } catch (e) { console.error('Load failed:', e); return []; }
 }
 
 async function loadLb() {
   const scores = await getLeaderboard();
+  lastRank = scores.findIndex(s => s.id === userId) + 1;
   lbList.innerHTML = scores.slice(0,10).map((s,i) =>
     `<li><span class="rank">#${i+1}</span> ${s.name}: ±${s.diff}ms</li>`
   ).join('') || '<li>No scores yet!</li>';
   lb.style.display = 'block';
+}
+
+// === SHARE FUNCTION ===
+function shareScore() {
+  const time = format(elapsed);
+  const rankText = lastRank > 0 ? ` | Rank #${lastRank}` : '';
+  const text = `I hit ${time} (±${lastDiff}ms) in Stopwatch Challenge!${rankText}\n\nPlay now: https://t.me/${TG.initDataUnsafe.bot_username}/app`;
+  
+  if (TG) {
+    TG.showPopup({
+      title: 'Share your score!',
+      message: text,
+      buttons: [{ type: 'default', text: 'Share', id: 'share' }]
+    }, (btn) => {
+      if (btn === 'share') {
+        const url = `https://t.me/share/url?url=${encodeURIComponent(text)}`;
+        TG.openTelegramLink(url);
+      }
+    });
+  } else {
+    alert(text);
+  }
 }
 
 // === GAME LOGIC ===
@@ -118,34 +132,36 @@ async function stopTimer() {
   if (!running) return;
   clearInterval(interval); running = false;
   s.disabled = false; t.disabled = true;
-  const diff = Math.abs(elapsed - TARGET);
+  lastDiff = Math.abs(elapsed - TARGET);
   
-  // Save score
-  await saveScore(diff);
+  await saveScore(lastDiff);
+  await loadLb(); // Get updated rank
   
   let msg = '', cls = 'r';
-  if (diff <= PERFECT) {
-    msg = `PERFECT!<br>${format(elapsed)} (±${diff} ms)`;
+  if (lastDiff <= PERFECT) {
+    msg = `PERFECT!<br>${format(elapsed)} (±${lastDiff} ms)`;
     cls = 'r p';
     confetti({ particleCount: 100, spread: 70, origin: { y: 0.6 } });
     winSound.play();
-  } else if (diff <= CLOSE) {
-    msg = `Close!<br>${format(elapsed)} (${(diff/1000).toFixed(2)}s off)`;
+  } else if (lastDiff <= CLOSE) {
+    msg = `Close!<br>${format(elapsed)} (${(lastDiff/1000).toFixed(2)}s off)`;
   } else {
-    msg = `${format(elapsed)}<br>${(diff/1000).toFixed(2)}s off`;
+    msg = `${format(elapsed)}<br>${(lastDiff/1000).toFixed(2)}s off`;
   }
   r.innerHTML = msg; r.className = cls;
   
   showLb.style.display = 'block';
   showLb.onclick = loadLb;
   
-  // Share via Main Button
-  if (TG) {
-    TG.MainButton.onClick(() => {
-      const text = `${msg.replace(/<br>/g,'\n')} | #Stopwatch10s`;
-      TG.sendData(text);
-    });
-  }
+  // ADD SHARE BUTTON
+  setTimeout(() => {
+    if (document.querySelector('.share-btn')) return;
+    const btn = document.createElement('button');
+    btn.textContent = 'Share Score';
+    btn.className = 'sbtn share-btn';
+    btn.onclick = shareScore;
+    document.querySelector('.c').appendChild(btn);
+  }, 100);
 }
 
 function reset() {
@@ -153,6 +169,7 @@ function reset() {
   s.disabled = false; t.disabled = true; update();
   r.textContent = 'Ready? Nail 10 seconds!'; r.className = 'r';
   showLb.style.display = 'none'; lb.style.display = 'none';
+  const old = document.querySelector('.share-btn'); if (old) old.remove();
 }
 
 // === EVENTS ===
